--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-jdbc.driverClassName = org.h2.Driver
-jdbc.url = jdbc:h2:tcp://localhost//tmp/gdw-db
-jdbc.username = test
-jdbc.password = test
+application.db.driverClassName = org.h2.Driver
+application.db.url = jdbc:h2:~/ewide
+application.db.username = admin
+application.db.password = admin
